--- a/index.html
+++ b/index.html
@@ -4,17 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Interactive rating component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <main>
+    <article class="card">
+      <!-- Rating state start -->
+      <section id="rate-state">
+        <!-- TODO: create rating state -->
+
+      </section>
+      <!-- Rating state end -->
+
+      <!-- Thank you state start -->
+      <section id="thank-state">
+        <!-- TODO: create thank you state -->
+
+      </section>
+      <!-- Thank you state end -->
+    </article>
+  </main>
 
   <!-- Rating state start -->
 
@@ -41,9 +53,11 @@
   <!-- Thank you state end -->
 
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/devBritt/" target="_blank">Brittany Carlton</a>.
+    </div>
+  </footer>
 </body>
 </html>
