Create rate-state section

--- a/index.html
+++ b/index.html
@@ -14,8 +14,22 @@
     <article class="card">
       <!-- Rating state start -->
       <section id="rate-state">
-        <!-- TODO: create rating state -->
+        <div class="star">
+          <svg width="17" height="16" xmlns="http://www.w3.org/2000/svg"><path d="m9.067.43 1.99 4.031c.112.228.33.386.58.422l4.45.647a.772.772 0 0 1 .427 1.316l-3.22 3.138a.773.773 0 0 0-.222.683l.76 4.431a.772.772 0 0 1-1.12.813l-3.98-2.092a.773.773 0 0 0-.718 0l-3.98 2.092a.772.772 0 0 1-1.119-.813l.76-4.431a.77.77 0 0 0-.222-.683L.233 6.846A.772.772 0 0 1 .661 5.53l4.449-.647a.772.772 0 0 0 .58-.422L7.68.43a.774.774 0 0 1 1.387 0Z" fill="currentColor"/></svg>
+        </div>
 
+        <h2>How did we do?</h2>
+        <p class="card-desc">Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
+
+        <ul id="rating-scale">
+          <li id="1" class="rating-opt">1</li>
+          <li id="2" class="rating-opt">2</li>
+          <li id="3" class="rating-opt">3</li>
+          <li id="4" class="rating-opt">4</li>
+          <li id="5" class="rating-opt">5</li>
+        </ul>
+
+        <button type="submit" id="submit-rating">Submit</button>
       </section>
       <!-- Rating state end -->
 
@@ -27,19 +41,6 @@
       <!-- Thank you state end -->
     </article>
   </main>
-
-  <!-- Rating state start -->
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
-
-  <!-- Rating state end -->
 
   <!-- Thank you state start -->
 
