Implement rating submit

--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
         <form id="rating">
           <fieldset id="scale">
             <label for="radio1" class="radio-label">
-              <input type="radio" id="radio1" name="radio1" value="1">
+              <input type="radio" id="radio1" name="rating" value="1">
               1
             </label>
             <label for="radio2" class="radio-label">
-              <input type="radio" id="radio2" name="radio2" value="2">
+              <input type="radio" id="radio2" name="rating" value="2">
               2
             </label>
             <label for="radio3" class="radio-label">
-              <input type="radio" id="radio3" name="radio3" value="3">
+              <input type="radio" id="radio3" name="rating" value="3">
               3
             </label>
             <label for="radio4" class="radio-label">
-              <input type="radio" id="radio4" name="radio4" value="4">
+              <input type="radio" id="radio4" name="rating" value="4">
               4
             </label>
             <label for="radio5" class="radio-label">
-              <input type="radio" id="radio5" name="radio5" value="5">
+              <input type="radio" id="radio5" name="rating" value="5">
               5
             </label>
           </fieldset>
 
-          <button type="submit" id="submit-rating">Submit</button>
+          <button type="button" id="submit-rating">Submit</button>
         </form>
       </section>
       <!-- Rating state end -->
@@ -67,6 +67,8 @@
     </article>
   </main>
   
+  <script src="./assets/js/submit-rating.js"></script>
+
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
