--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
           <button type="button" id="submit-rating">Submit</button>
         </form>
+        <p id="submit-error" class="hide">Oops! Pick a rating before clicking submit!</p>
       </section>
       <!-- Rating state end -->
 
